2010-01-12  Philippe Normand  <pnormand@igalia.com>

        Rubber-stamped by Gustavo Noronha Silva.

        [GTK] Failing media/video-seek-past-end-playing.html
        https://bugs.webkit.org/show_bug.cgi?id=33015

        * platform/gtk/Skipped: Skipping the test again, we need to kill
        its last timer.

2010-01-12  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Eric Carlson.

        [GTK] Failing media/video-seek-past-end-playing.html
        https://bugs.webkit.org/show_bug.cgi?id=33015

        Listen on timeupdate event instead of waiting a fixed amount of
        time, which is prone to test flackyness.

        * media/audio-mpeg-supported.html:
        * media/video-seek-past-end-playing.html:
        * platform/gtk/Skipped:

2010-01-12  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Darin Adler and Simon Fraser.

        rdar://problem/5684062
        https://bugs.webkit.org/show_bug.cgi?id=23094
        Flash of white when switching from poster image to video playback
        
        https://bugs.webkit.org/show_bug.cgi?id=23140
        <video> poster should scale like a video frame

        * media/video-poster-expected.txt: Remove blank line at beginning of test result present
        as a side effect of the media element using RenderImage to display the poster.
        * media/video-poster-scale.html: New.
        * media/video-poster-scale-expected.txt: New.

2010-01-12  Tony Chang  <tony@chromium.org>

        Reviewed by Maciej Stachowiak.

        Add a test for a Chromium crash when loading multipart/x-mixed-replace
        data.

        https://bugs.webkit.org/show_bug.cgi?id=31446

        * http/tests/multipart/multipart-wait-before-boundary-expected.txt: Added.
        * http/tests/multipart/multipart-wait-before-boundary.html: Added.
        * http/tests/multipart/resources/multipart-wait-before-boundary.php: Added.

2010-01-12  Petri Latvala  <petri.latvala@nomovok.com>
